syntax = "proto3";

package proto.dynamic.v1;

import "proto/dynamic/v1/dynamic.proto";

option go_package = "github.com/mamoruuji/dynamic_novel_api/gen/proto/dynamic/v1;dynamicv1";

message ListTagsRequest {
}

message ListTagsResponse {
  repeated TagData tags = 1;
}

message SetDynamicOnTagRequest {
  int32 dynamic_id = 1;
  repeated string tag_names = 2;
}

message SetDynamicOnTagResponse {}


service TagService {
  rpc ListTags(ListTagsRequest) returns (ListTagsResponse) {}
  rpc SetDynamicOnTag(SetDynamicOnTagRequest) returns (SetDynamicOnTagResponse) {}
}
